minor style fix on mobile

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -279,6 +279,7 @@
       @media screen and (max-width: $break-small) {
         font-size: 15px;
         margin: 10px 0 65px 0;
+        width: 80%;
       }
     }
   }
